--- a/kubernetes/flux/examples/01/service.yaml
+++ b/kubernetes/flux/examples/01/service.yaml
@@ -11,6 +11,6 @@ spec:
       protocol: TCP
       targetPort: 80
       name: http
-  type: LoadBalancer
+  type: ClusterIp
   selector:
     app: nginx
